[package]
name = "self-addressing-identifier"
version = "0.2.1"
edition = "2021"
authors = ["Human Colossus"]
description = "Self-Addressing identifier library"
documentation = "https://github.com/thclab/sai"
homepage = "https://github.com/thclab/sai"
repository = "https://github.com/thclab/sai"
license = "EUPL-1.2"
keywords = ["keri", "SAI", "identifier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
said = { version = "0.3.0" }

[lib]
crate-type = ["cdylib"]
